@@ -1,5 +1,6 @@
 Makefile
 Makefile.in
+Makefile.in.in
 POTFILES
 .intltool-merge-cache
 *gmo
